dataset1235/2025-2/805158916/users/2488736387/executions/2651470117_704983377.log
== SUBMISSION (2025-08-25 14:20:10)
-- CODE: 
X = int(input())
Y = int(input())

quociente_inteiro = X // Y
resto_divisao = X % Y

quociente_real = X / Y

produto = X * Y
potencia = X ** Y

print(quociente_inteiro)
print(resto_divisao)

print(quociente_real)

print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:19:12)
-- CODE: 
X = int(input())
Y = int(input())
quociente_inteiro = X // Y
resto_divisao = X % Y

quociente_real = X / Y

produto = X * Y
potencia = X ** Y

print(quociente_inteiro)
print(resto_divisao)

print(quociente_rela)

print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(quociente_rela)
          ^^^^^^^^^^^^^^
NameError: name 'quociente_rela' is not defined. Did you mean: 'quociente_real'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:34:30)
-- CODE: 
X = int(input())
Y = int(input())

quociente_inteiro = X // Y
resto_divisao = X % Y
quociente_real = X / Y
produto = X * Y
potencia = Y ** 3

print(quociente_inteiro)
print(resto_divisao)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:21:53)
-- CODE: 
X = int(input())
Y = int(input())

quociente_inteiro = X // Y
resto_divisao = X % Y

quociente_real = X / Y

produto = X * Y
potencia = X ** Y

print(quociente_inteiro)
print(resto_divisao)

print(quociente_real)

print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:57:01)
-- CODE: 
# Inicio
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de Y: "))
# Quociente da divisão inteira
Q1 = X//Y
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:31:43)
-- CODE: 
X = int(input())
Y = int(input())
quociente_inteiro = X // Y
resto_divisao = X % Y
quociente_real = X / Y
produto = X * Y
potencia = X ** Y
print(quociente_inteiro)
print(resto_divisao)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
